--- a/staticwebapp.config.json
+++ b/staticwebapp.config.json
@@ -2,7 +2,7 @@
 "routes": [
 {
 "route": "/api/*",
-"rewrite": "https://<YOUR-APPSERVICE-NAME>.azurewebsites.net/api/*"
+"rewrite": "amitechweb01-afahbmgyczf0egbr.japanwest-01.azurewebsites.net/api/*"
 }
 ],
 "navigationFallback": { "rewrite": "/index.html" }
