--- a/api/package.json
+++ b/api/package.json
@@ -1,15 +1,13 @@
 {
-"name": "employee-api",
-"version": "1.0.0",
-"private": true,
-"type": "module",
-"main": "server.js",
-"scripts": {
-"start": "node server.js"
-},
-"dependencies": {
-"cors": "^2.8.5",
-"express": "^4.19.2",
-"pg": "^8.11.3"
-}
+  "name": "employee-api",
+  "version": "1.0.0",
+  "private": true,
+  "main": "server.js",
+  "scripts": {
+    "start": "node server.js"
+  },
+  "dependencies": {
+    "express": "^4.19.2",
+    "cors": "^2.8.5"
+  }
 }
