--- a/api-java/pom.xml
+++ b/api-java/pom.xml
@@ -49,6 +49,7 @@
         <dependency>
             <groupId>org.postgresql</groupId>
             <artifactId>postgresql</artifactId>
+            <scope>runtime</scope>
         </dependency>
     </dependencies>
 
@@ -65,4 +66,5 @@
     </build>
 
 </project>
+
 
