--- a/staticwebapp.config.json
+++ b/staticwebapp.config.json
@@ -2,8 +2,9 @@
 "routes": [
 {
 "route": "/api/*",
-"rewrite": "https://amitechweb01-afahbmgyczf0egbr.japanwest-01.azurewebsites.net/api/*"
+"rewrite": "https://amitechweb01-afahbmgyczf0egbr.japanwest-01.azurewebsites.net/api/{*}"
 }
 ],
 "navigationFallback": { "rewrite": "/index.html" }
+
 }
