--- a/staticwebapp.config.json
+++ b/staticwebapp.config.json
@@ -5,6 +5,7 @@
 "rewrite": "https://amitechweb01-afahbmgyczf0egbr.japanwest-01.azurewebsites.net/api/{*}"
 }
 ],
-"navigationFallback": { "rewrite": "/index.html" }
+"navigationFallback": { "rewrite": "/index.html","exclude": ["/api/*"] }
 
 }
+
