--- a/.github/workflows/main_amitechaps01.yml
+++ b/.github/workflows/main_amitechaps01.yml
@@ -1,19 +1,19 @@
-# Docs for the Azure Web Apps Deploy action: https://github.com/Azure/webapps-deploy
-# More GitHub Actions for Azure: https://github.com/Azure/actions
-
 name: Build and deploy JAR app to Azure Web App - amitechAPS01
 
 on:
   push:
     branches:
       - main
+    paths:
+      - "api-java/**"
+      - ".github/workflows/main_amitechaps01.yml"
   workflow_dispatch:
 
 jobs:
   build:
     runs-on: ubuntu-latest
     permissions:
-      contents: read #This is required for actions/checkout
+      contents: read
 
     steps:
       - uses: actions/checkout@v4
@@ -21,43 +21,36 @@ jobs:
       - name: Set up Java version
         uses: actions/setup-java@v4
         with:
-          java-version: '21'
-          distribution: 'microsoft'
+          java-version: "21"
+          distribution: "temurin"
 
-      - name: Build with Maven
-        run: mvn clean install
+      - name: Build with Maven (api-java)
+        working-directory: api-java
+        run: mvn -B -DskipTests clean package
 
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v4
         with:
           name: java-app
-          path: '${{ github.workspace }}/target/*.jar'
+          path: api-java/target/*.jar
 
   deploy:
     runs-on: ubuntu-latest
     needs: build
     permissions:
-      id-token: write #This is required for requesting the JWT
-      contents: read #This is required for actions/checkout
-  
+      id-token: write
+      contents: read
+
     steps:
       - name: Download artifact from build job
         uses: actions/download-artifact@v4
         with:
           name: java-app
-      
+          path: artifact
+
       - name: Login to Azure
         uses: azure/login@v2
         with:
           client-id: ${{ secrets.AZUREAPPSERVICE_CLIENTID_930CBAE9FD7F4FB09286F922C7E82004 }}
           tenant-id: ${{ secrets.AZUREAPPSERVICE_TENANTID_8A84DD8FD0614FA1B47BFDB03489CC20 }}
-          subscription-id: ${{ secrets.AZUREAPPSERVICE_SUBSCRIPTIONID_FA45941F61B342E78B0D4731F793CD6E }}
-
-      - name: Deploy to Azure Web App
-        id: deploy-to-webapp
-        uses: azure/webapps-deploy@v3
-        with:
-          app-name: 'amitechAPS01'
-          slot-name: 'Production'
-          package: '*.jar'
-          
+          subscription-id: ${{ secrets.AZUREAPPSERVICE_SUBSCRIP_
