--- a/.github/workflows/main_amitechaps01.yml
+++ b/.github/workflows/main_amitechaps01.yml
@@ -1,5 +1,3 @@
-# Docs: https://github.com/Azure/webapps-deploy
-
 name: Build and deploy JAR app to Azure Web App - amitechAPS01
 
 on:
@@ -14,44 +12,43 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
-    permissions:
-      contents: read
-
     steps:
       - uses: actions/checkout@v4
 
-      - name: Set up Java 21
+      - name: Set up Java
         uses: actions/setup-java@v4
         with:
+          distribution: temurin
           java-version: "21"
-          distribution: "temurin"
 
-      - name: Build with Maven (api-java)
+      - name: Build JAR
         working-directory: api-java
-        run: mvn -B clean package
+        run: mvn clean package -DskipTests
 
-      - name: Upload JAR artifact
+      - name: Upload JAR
         uses: actions/upload-artifact@v4
         with:
-          name: java-app
-          path: api-java/target/*.jar
+          name: app
+          path: api-java/target/*jar
 
   deploy:
     runs-on: ubuntu-latest
     needs: build
-    permissions:
-      id-token: write
-      contents: read
-
     steps:
-      - name: Download artifact
+      - name: Download JAR
         uses: actions/download-artifact@v4
         with:
-          name: java-app
-          path: artifact
+          name: app
 
       - name: Login to Azure
         uses: azure/login@v2
         with:
           client-id: ${{ secrets.AZUREAPPSERVICE_CLIENTID_930CBAE9FD7F4FB09286F922C7E82004 }}
-          tenant-id: ${{ secrets.AZUREAPPSERVICE_TENANTID_8A84DD8FD0
+          tenant-id: ${{ secrets.AZUREAPPSERVICE_TENANTID_8A84DD8FD0614FA1B47BFDB03489CC20 }}
+          subscription-id: ${{ secrets.AZUREAPPSERVICE_SUBSCRIPTIONID_FA45941F61B342E78B0D4731F793CD6E }}
+
+      - name: Deploy to App Service
+        uses: azure/webapps-deploy@v3
+        with:
+          app-name: amitechAPS01
+          package: '*.jar'
