--- a/.github/workflows/main_amitechaps03.yml
+++ b/.github/workflows/main_amitechaps03.yml
@@ -35,6 +35,9 @@ jobs:
   deploy:
     runs-on: ubuntu-latest
     needs: build
+    permissions:
+      id-token: write
+      contents: read
 
     steps:
       - name: Download artifact
