--- a/staticwebapp.config.json
+++ b/staticwebapp.config.json
@@ -2,7 +2,7 @@
 "routes": [
 {
 "route": "/api/*",
-"rewrite": "https://amitechweb01-afahbmgyczf0egbr.japanwest-01.azurewebsites.net/api/{*}"
+"rewrite": "amitechaps03-f9ejhfene2gdd6dp.japanwest-01.azurewebsites.net/api/{*}"
 }
 ],
 "navigationFallback": { "rewrite": "/index.html","exclude": ["/api/*"] }
