--- a/staticwebapp.config.json
+++ b/staticwebapp.config.json
@@ -2,7 +2,7 @@
   "routes": [
     {
       "route": "/api/*",
-      "rewrite": "https://APP.azurewebsites.net/api/{*path}"
+      "rewrite": "amitechaps06-c8c5bzcchyd9e8cc.japanwest-01.azurewebsites.net/api/{*path}"
     }
   ]
 }
