--- a/.github/workflows/main_amitechaps06.yml
+++ b/.github/workflows/main_amitechaps06.yml
@@ -1,4 +1,4 @@
-name: Build and deploy JAR app to Azure Web App - amitechAPS06
+name: Build and deploy JAR app to Azure Web App - amitechaps06
 
 on:
   push:
@@ -10,7 +10,7 @@ on:
   workflow_dispatch:
 
 jobs:
-  build:
+  build-and-deploy:
     runs-on: ubuntu-latest
 
     steps:
@@ -26,35 +26,9 @@ jobs:
         run: mvn clean package
         working-directory: api-java
 
-      - name: Upload artifact
-        uses: actions/upload-artifact@v4
-        with:
-          name: java-app
-          path: api-java/target/*.jar
-
-  deploy:
-    runs-on: ubuntu-latest
-    needs: build
-    permissions:
-      id-token: write
-      contents: read
-
-    steps:
-      - name: Download artifact
-        uses: actions/download-artifact@v4
-        with:
-          name: java-app
-
-      - name: Login to Azure
-        uses: azure/login@v2
-        with:
-          client-id: ${{ secrets.AZUREAPPSERVICE_CLIENTID_36DB064DA8ED4E3F83800DF7BC3E4263 }}
-          tenant-id: ${{ secrets.AZUREAPPSERVICE_TENANTID_8F77C232F5074EEC8F15EDAD9060177E }}
-          subscription-id: ${{ secrets.AZUREAPPSERVICE_SUBSCRIPTIONID_BE06891F639C4966A4E50147ADAE8E69 }}
-
       - name: Deploy to Azure Web App
-        uses: azure/webapps-deploy@v3
+        uses: azure/webapps-deploy@v2
         with:
-          app-name: amitechAPS06
-          slot-name: Production
-          package: '*.jar'
+          app-name: amitechaps06
+          publish-profile: ${{ secrets.AZURE_WEBAPP_PUBLISH_PROFILE }}
+          package: api-java/target/*.jar
