--- a/api-java/src/main/resources/application.yml
+++ b/api-java/src/main/resources/application.yml
@@ -23,7 +23,7 @@ spring:
 
   datasource:
     url: jdbc:postgresql://amitechpsqlsvr01.postgres.database.azure.com:5432/webappdb?sslmode=require
-    username: amitechdbadmin@amitechpsqlsvr01
+    username: amitechdbadmin
     password: Psqlp@swadmin2025
 
   jpa:
