--- a/staticwebapp.config.json
+++ b/staticwebapp.config.json
@@ -1,8 +1,8 @@
 {
   "routes": [
     {
-      "route": "/api/*",
-      "rewrite": "amitechaps06-c8c5bzcchyd9e8cc.japanwest-01.azurewebsites.net/api/{*path}"
+      "route": "/api/{*path}",
+      "rewrite": "https://amitechaps06-c8c5bzcchyd9e8cc.japanwest-01.azurewebsites.net/api/{*path}"
     }
   ]
 }
