--- a/staticwebapp.config.json
+++ b/staticwebapp.config.json
@@ -1,10 +1,14 @@
 {
-"routes": [
-{
-"route": "/api/*",
-"rewrite": "https://amitechaps06-c8c5bzcchyd9e8cc.japanwest-01.azurewebsites.net/api/{*}"
-}
-],
-"navigationFallback": { "rewrite": "/index.html","exclude": ["/api/*"] }
-
+  "routes": [
+    {
+      "route": "/api/{*path}",
+      "rewrite": "https://amitechaps06-c8c5bzcchyd9e8cc.japanwest-01.azurewebsites.net/api/{*path}"
+    }
+  ],
+  "navigationFallback": {
+    "rewrite": "/index.html",
+    "exclude": [
+      "/api/*"
+    ]
+  }
 }
