--- a/staticwebapp.config.json
+++ b/staticwebapp.config.json
@@ -8,7 +8,8 @@
   "navigationFallback": {
     "rewrite": "/index.html",
     "exclude": [
-      "/api/*"
+      "/api/*",
+      "/api/employees*"
     ]
   }
 }
