--- a/staticwebapp.config.json
+++ b/staticwebapp.config.json
@@ -2,14 +2,17 @@
   "routes": [
     {
       "route": "/api/*",
-      "rewrite": "https://amitechaps06-c8c5bzcchyd9e8cc.japanwest-01.azurewebsites.net/*"
+      "rewrite": "https://amitechaps06-c8c5bzcchyd9e8cc.japanwest-01.azurewebsites.net/api/*",
+      "methods": ["GET", "POST", "OPTIONS"]
     }
   ],
   "navigationFallback": {
     "rewrite": "/index.html",
     "exclude": [
       "/api/*",
-      "/api/employees*"
+      "*.json",
+      "*.js",
+      "*.css"
     ]
   }
 }
