Fix SWA api rewrite route

--- a/staticwebapp.config.json
+++ b/staticwebapp.config.json
@@ -2,17 +2,13 @@
   "routes": [
     {
       "route": "/api/*",
-      "rewrite": "https://amitechaps06-c8c5bzcchyd9e8cc.japanwest-01.azurewebsites.net/api/*",
-      "methods": ["GET", "POST", "OPTIONS"]
+      "rewrite": "https://amitechaps06-c8c5bzcchyd9e8cc.japanwest-01.azurewebsites.net/api/*"
     }
   ],
   "navigationFallback": {
     "rewrite": "/index.html",
     "exclude": [
-      "/api/*",
-      "*.json",
-      "*.js",
-      "*.css"
+      "/api/*"
     ]
   }
 }
