Fix SWA api rewrite route

--- a/staticwebapp.config.json
+++ b/staticwebapp.config.json
@@ -1,15 +1,6 @@
 {
-  "routes": [
-    {
-      "route": "/api/*",
-      "rewrite": "https://amitechaps06-c8c5bzcchyd9e8cc.japanwest-01.azurewebsites.net/*",
-      "methods": ["GET", "POST", "OPTIONS"]
-    }
-  ],
   "navigationFallback": {
     "rewrite": "/index.html",
-    "exclude": [
-      "/api/*"
-    ]
+    "exclude": ["/api/*"]
   }
 }
